# opengl-learning-project-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW3.cmake
dependencies/glad/: glad.c  glad.h
src/: config.cpp  config.h  consts.h  main.cpp  material.cpp  material.h  shader_utils.cpp  shader_utils.h  triangle_mesh.cpp  triangle_mesh.h  utils.cpp  utils.h
src/shaders/: fragment_shader.fx  vertex_shader.fx
